@@ -6,6 +6,8 @@ $Id$
 
 Changes in version 1.3.2:
 
+* Master takes mailbox sync manager configurations from EEPROM words
+  0x0018-0x001b, if no sync manager configurations are provided.
 * Calculate checksum when writing EEPROM or alias address.
 * Removed config.kbuild and replaced Kbuild files by Kbuild.in files.
 
